# vectorized_types

./: .gitignore  CMakeLists.txt  README.md  vectorized_type.h
examples/: AoS.cxx  SoA.cxx  SoA_gather.cxx  layout_benchmark.cxx
include/: vectorized_type.h  vectorized_types.h
include/vectorized_type/preferences/: sse.h
include/vectorized_type/preferences/mathfun/: sse_mathfun.h
include/vectorized_types/: array_wrapper.hpp  default.h
include/vectorized_types/preferences/: avx.h  avx512.h  msvc_avx.h  msvc_sse.h  sse.h
include/vectorized_types/preferences/mathfun/: avx_mathfun.h  sse_mathfun.h
src/: avx2_mathfun.cxx  avx_mathfun.cxx  sse_mathfun.cxx
vectorized_type/: array_wrapper.hpp  default.h
vectorized_type/preferences/: avx.h  avx512.h  sse.h
vectorized_type/preferences/mathfun/: avx_mathfun.h
